--- a/strand/iOS/Strand/Strand/DFStrandGalleryViewController.xib
+++ b/strand/iOS/Strand/Strand/DFStrandGalleryViewController.xib
@@ -9,6 +9,8 @@
             <connections>
                 <outlet property="collectionView" destination="qQw-mg-bqu" id="sqZ-3W-7i2"/>
                 <outlet property="flowLayout" destination="7KE-aA-mQ9" id="FsQ-KY-U8C"/>
+                <outlet property="invitedPeopleIcon" destination="taR-b5-Fap" id="zxm-bh-shl"/>
+                <outlet property="invitedPeopleLabel" destination="oww-Ig-Zll" id="cQV-zN-2bC"/>
                 <outlet property="peopleBackgroundView" destination="oSA-Sf-c6J" id="InY-ay-1hF"/>
                 <outlet property="peopleLabel" destination="oSA-Sf-c6J" id="PLk-a3-do3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -20,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="qQw-mg-bqu">
-                    <rect key="frame" x="0.0" y="18" width="600" height="582"/>
+                    <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7KE-aA-mQ9" customClass="DFGalleryCollectionViewFlowLayout">
                         <size key="itemSize" width="50" height="50"/>
@@ -36,28 +38,78 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PHW-KG-z5B" userLabel="PeopleViewBackground">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="20"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSA-Sf-c6J">
-                            <rect key="frame" x="8" y="2" width="584" height="16"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DZJ-XQ-wo1" userLabel="People Wrapper">
+                            <rect key="frame" x="236" y="0.0" width="128" height="20"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="People" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSA-Sf-c6J" userLabel="People Label">
+                                    <rect key="frame" x="17" y="2" width="42" height="16"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invited" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oww-Ig-Zll" userLabel="People Label">
+                                    <rect key="frame" x="87" y="2" width="41" height="16"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/PeopleHeaderIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="Bic-Vx-B4G">
+                                    <rect key="frame" x="0.0" y="3" width="13" height="13"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="13" id="PkU-I7-a31"/>
+                                        <constraint firstAttribute="width" constant="13" id="oHL-W9-46e"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="imageRenderingMode">
+                                            <integer key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </imageView>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/InviteHeaderIcon" translatesAutoresizingMaskIntoConstraints="NO" id="taR-b5-Fap">
+                                    <rect key="frame" x="70" y="3" width="13" height="13"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="13" id="koz-8E-Xxy"/>
+                                        <constraint firstAttribute="height" constant="13" id="nIU-1b-f2X"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="imageRenderingMode">
+                                            <integer key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="centerY" secondItem="oSA-Sf-c6J" secondAttribute="centerY" id="3Aj-3N-h2I"/>
+                                <constraint firstAttribute="centerY" secondItem="Bic-Vx-B4G" secondAttribute="centerY" id="4mc-BP-KTO"/>
+                                <constraint firstItem="Bic-Vx-B4G" firstAttribute="leading" secondItem="DZJ-XQ-wo1" secondAttribute="leading" id="ESV-V0-JEC"/>
+                                <constraint firstItem="taR-b5-Fap" firstAttribute="leading" secondItem="oSA-Sf-c6J" secondAttribute="trailing" constant="11" id="FFz-WO-GYx"/>
+                                <constraint firstItem="oww-Ig-Zll" firstAttribute="leading" secondItem="taR-b5-Fap" secondAttribute="trailing" constant="4" id="FW5-RJ-kv9"/>
+                                <constraint firstItem="oSA-Sf-c6J" firstAttribute="leading" secondItem="Bic-Vx-B4G" secondAttribute="trailing" constant="4" id="Npq-2y-XOI"/>
+                                <constraint firstAttribute="centerY" secondItem="oww-Ig-Zll" secondAttribute="centerY" id="QIU-6L-p8F"/>
+                                <constraint firstAttribute="centerY" secondItem="taR-b5-Fap" secondAttribute="centerY" id="ZjG-rh-0Gy"/>
+                                <constraint firstAttribute="trailing" secondItem="oSA-Sf-c6J" secondAttribute="trailing" priority="700" id="aC8-f1-cIM"/>
+                                <constraint firstAttribute="trailing" secondItem="oww-Ig-Zll" secondAttribute="trailing" id="gTr-Ds-Xrj"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="0.96078437566757202" green="0.31764706969261169" blue="0.18823531270027161" alpha="0.80000000000000004" colorSpace="deviceRGB"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="oSA-Sf-c6J" secondAttribute="trailing" constant="8" id="ItZ-sK-APy"/>
-                        <constraint firstAttribute="centerY" secondItem="oSA-Sf-c6J" secondAttribute="centerY" id="hJR-Il-sQO"/>
-                        <constraint firstItem="oSA-Sf-c6J" firstAttribute="leading" secondItem="PHW-KG-z5B" secondAttribute="leading" constant="8" id="ra1-qn-zvQ"/>
+                        <constraint firstItem="DZJ-XQ-wo1" firstAttribute="top" secondItem="PHW-KG-z5B" secondAttribute="top" id="0Vd-8H-Vem"/>
+                        <constraint firstAttribute="centerX" secondItem="DZJ-XQ-wo1" secondAttribute="centerX" id="iBE-gz-KC7"/>
                         <constraint firstAttribute="height" constant="20" id="yoO-RN-CxB"/>
+                        <constraint firstAttribute="bottom" secondItem="DZJ-XQ-wo1" secondAttribute="bottom" id="z7X-XW-dz5"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="qQw-mg-bqu" firstAttribute="top" secondItem="oSA-Sf-c6J" secondAttribute="bottom" id="951-4a-HMZ"/>
                 <constraint firstItem="qQw-mg-bqu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="AAK-YL-SC3"/>
                 <constraint firstAttribute="bottom" secondItem="qQw-mg-bqu" secondAttribute="bottom" id="CNJ-Zy-P42"/>
                 <constraint firstAttribute="trailing" secondItem="PHW-KG-z5B" secondAttribute="trailing" id="JIx-fR-fZY"/>
+                <constraint firstItem="qQw-mg-bqu" firstAttribute="top" secondItem="PHW-KG-z5B" secondAttribute="bottom" id="SAb-lO-Eaw"/>
                 <constraint firstAttribute="trailing" secondItem="qQw-mg-bqu" secondAttribute="trailing" id="hIy-Xu-rCp"/>
                 <constraint firstItem="PHW-KG-z5B" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="pCW-Of-HIV"/>
                 <constraint firstItem="PHW-KG-z5B" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="zPg-Sh-Vd0"/>
@@ -65,4 +117,8 @@
             <nil key="simulatedStatusBarMetrics"/>
         </view>
     </objects>
+    <resources>
+        <image name="Assets/Icons/InviteHeaderIcon" width="16" height="16"/>
+        <image name="Assets/Icons/PeopleHeaderIcon.png" width="16" height="16"/>
+    </resources>
 </document>
