--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -97,7 +97,7 @@
 		{% for entry in strandV2List %}
 			<tr class='ui-row {% if entry.internal == True %} ui-row-internal {% endif %}'>
 				<td class='userid b-r'> {{ entry.user.id }} </td>
-				<td class='name b-r' title='{{ entry.user.phone_number }}' > <a target=_new href='/strand/api/strand_inbox?user_id={{ entry.user.id }}'>{{ entry.user.display_name}}</a></td>
+				<td class='name b-r' title='{{ entry.user.phone_number }}' > <a target=_blank href='/strand/api/strand_inbox?user_id={{ entry.user.id }}'>{{ entry.user.display_name}}</a></td>
 				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
 				<td class='db-count right b-r'>	{{ entry.metadataCount }} </td>		
 				<td class='thumbs right b-r'> {{ entry.weeklyPhotos }} | {{ entry.user.thumbsCount }} </td>
@@ -107,7 +107,7 @@
 				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>				
 				<td class='location right b-r'> 
 					{% if entry.user.last_location_point %}
-					<a target=_new href='http://maps.google.com?q={{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}'>{{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}</a>
+					<a target=_blank href='http://maps.google.com?q={{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}'>{{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}</a>
 					{% endif %}
 					{% if entry.user.last_location_accuracy %}
 					(&plusmn;{{ entry.user.last_location_accuracy }}m)
@@ -145,7 +145,7 @@
 		{% for entry in strandList %}
 			<tr class='ui-row {% if entry.internal == True %} ui-row-internal {% endif %}'>
 				<td class='userid b-r'> {{ entry.user.id }} </td>
-				<td class='name b-r' title='{{ entry.user.phone_number }}' > <a target=_new href='/strand/viz/neighbors?user_id={{ entry.user.id }}'>{{ entry.user.display_name}}</a></td>
+				<td class='name b-r' title='{{ entry.user.phone_number }}' > <a target=_blank href='/strand/viz/neighbors?user_id={{ entry.user.id }}'>{{ entry.user.display_name}}</a></td>
 				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
 				<td class='db-count right b-r'>	{{ entry.metadataCount }} </td>		
 				<td class='thumbs right b-r'> {{ entry.weeklyPhotos }} | {{ entry.user.thumbsCount }} </td>
@@ -155,7 +155,7 @@
 				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>				
 				<td class='location right b-r'> 
 					{% if entry.user.last_location_point %}
-					<a target=_new href='http://maps.google.com?q={{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}'>{{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}</a>
+					<a target=_blank href='http://maps.google.com?q={{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}'>{{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}</a>
 					{% endif %}
 					{% if entry.user.last_location_accuracy %}
 					(&plusmn;{{ entry.user.last_location_accuracy }}m)
@@ -236,11 +236,11 @@ $(document).ready(function() {
 	}
   });
   if (!(location.hostname.match('prod.strand.duffyapp.com'))){
-	$("#ui-server-id").append('DEV <span class="ui-server-switch">(<a target=_new href="http://prod.strand.duffyapp.com/viz/summary">Switch to Prod</a>)</span>');
+	$("#ui-server-id").append('DEV <span class="ui-server-switch">(<a target=_blank href="http://prod.strand.duffyapp.com/viz/summary">Switch to Prod</a>)</span>');
 	$("#ui-server-id").css('background-color', '#C0C0C0');
   }
   else {
-	$("#ui-server-id").append('PROD <span class="ui-server-switch">(<a target=_new href="http://dev.duffyapp.com/viz/summary">Switch to Dev</a>)</span>');
+	$("#ui-server-id").append('PROD <span class="ui-server-switch">(<a target=_blank href="http://dev.duffyapp.com/viz/summary">Switch to Dev</a>)</span>');
 	$("#ui-server-id").css('background-color', 'orange');
   }
   $('td.timeago').each(function(){
