--- a/strand/iOS/Strand/Strand/DFSmallCardTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFSmallCardTableViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -113,8 +114,8 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RUa-rH-Ja9" customClass="DFCircleBadge">
-                                        <rect key="frame" x="267" y="106" width="29" height="29"/>
-                                        <color key="backgroundColor" red="0.96078431369999995" green="0.31764705879999999" blue="0.18823529410000001" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                        <rect key="frame" x="267" y="102" width="29" height="29"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.75" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="29" id="1P8-pP-scL"/>
                                             <constraint firstAttribute="width" constant="29" id="FcW-I8-Ir3"/>
@@ -126,16 +127,16 @@
                                     <constraint firstItem="Ej9-nj-KOA" firstAttribute="top" secondItem="2bz-BX-pwC" secondAttribute="bottom" id="4kr-V9-xP8"/>
                                     <constraint firstAttribute="trailing" secondItem="2bz-BX-pwC" secondAttribute="trailing" id="68C-jh-dOe"/>
                                     <constraint firstItem="2bz-BX-pwC" firstAttribute="top" secondItem="pJ3-0X-1LU" secondAttribute="top" id="Bxh-g2-MoI"/>
-                                    <constraint firstAttribute="trailing" secondItem="RUa-rH-Ja9" secondAttribute="trailing" constant="8" id="FAF-SG-tWS"/>
+                                    <constraint firstItem="RUa-rH-Ja9" firstAttribute="bottom" secondItem="Ej9-nj-KOA" secondAttribute="bottom" id="Dev-ik-Ae8"/>
                                     <constraint firstItem="Ej9-nj-KOA" firstAttribute="top" secondItem="9UN-Wm-m11" secondAttribute="bottom" constant="10" id="FHa-do-k9e"/>
                                     <constraint firstItem="Ej9-nj-KOA" firstAttribute="leading" secondItem="pJ3-0X-1LU" secondAttribute="leading" constant="8" id="KzQ-iZ-1oV"/>
                                     <constraint firstItem="9UN-Wm-m11" firstAttribute="top" secondItem="pJ3-0X-1LU" secondAttribute="top" constant="10" id="RVi-fU-ofi"/>
                                     <constraint firstItem="2bz-BX-pwC" firstAttribute="top" secondItem="pJ3-0X-1LU" secondAttribute="top" id="Yy9-CX-ghC"/>
                                     <constraint firstItem="9UN-Wm-m11" firstAttribute="leading" secondItem="pJ3-0X-1LU" secondAttribute="leading" constant="8" id="ZVl-K6-mH9"/>
-                                    <constraint firstAttribute="bottom" secondItem="RUa-rH-Ja9" secondAttribute="bottom" constant="8" id="kQq-br-D1n"/>
                                     <constraint firstAttribute="trailing" secondItem="Ej9-nj-KOA" secondAttribute="trailing" constant="8" id="pjQ-9r-LDF"/>
                                     <constraint firstItem="2bz-BX-pwC" firstAttribute="leading" secondItem="9UN-Wm-m11" secondAttribute="trailing" constant="2" id="rV1-Bt-hJJ"/>
                                     <constraint firstAttribute="bottom" secondItem="Ej9-nj-KOA" secondAttribute="bottom" constant="12" id="uFg-XC-diH"/>
+                                    <constraint firstItem="RUa-rH-Ja9" firstAttribute="trailing" secondItem="Ej9-nj-KOA" secondAttribute="trailing" id="vGY-NO-oBs"/>
                                 </constraints>
                             </view>
                         </subviews>
