--- a/strand/iOS/Strand/Strand/DFPeoplePickerViewController.xib
+++ b/strand/iOS/Strand/Strand/DFPeoplePickerViewController.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFPeoplePickerViewController">
             <connections>
-                <outlet property="doneButton" destination="h1z-eC-fV9" id="GbV-aN-Gos"/>
+                <outlet property="doneButton" destination="T24-ju-et9" id="B08-fk-NIn"/>
                 <outlet property="doneButtonWrapper" destination="h1z-eC-fV9" id="nwS-cW-XKp"/>
                 <outlet property="tableView" destination="pkn-BI-Fod" id="0W9-ig-PRF"/>
                 <outlet property="view" destination="QF5-wa-mQe" id="2gD-BR-Ddi"/>
