--- a/strand/iOS/Strand/Strand/DFCardTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFCardTableViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -64,6 +65,7 @@
                                             <constraint firstItem="NPB-S6-YvY" firstAttribute="top" secondItem="Ry2-wJ-FfO" secondAttribute="top" id="70h-ii-Jbm"/>
                                             <constraint firstAttribute="trailing" secondItem="NPB-S6-YvY" secondAttribute="trailing" id="7s1-BX-TbJ"/>
                                             <constraint firstAttribute="bottom" secondItem="MJw-rI-6rQ" secondAttribute="bottom" id="A9V-pD-Q3j"/>
+                                            <constraint firstItem="NPB-S6-YvY" firstAttribute="leading" secondItem="Ry2-wJ-FfO" secondAttribute="leading" priority="700" id="AFU-tA-Nq2"/>
                                             <constraint firstItem="6Us-ce-ejk" firstAttribute="centerY" secondItem="NPB-S6-YvY" secondAttribute="centerY" id="LjR-yD-r4S"/>
                                             <constraint firstItem="6Us-ce-ejk" firstAttribute="leading" secondItem="Ry2-wJ-FfO" secondAttribute="leading" id="NbK-GX-9Ej"/>
                                             <constraint firstItem="MJw-rI-6rQ" firstAttribute="leading" secondItem="Ry2-wJ-FfO" secondAttribute="leading" id="Pou-Ya-j4S"/>
