--- a/strand/iOS/Strand/Strand/DFSwapUpsellView.xib
+++ b/strand/iOS/Strand/Strand/DFSwapUpsellView.xib
@@ -19,15 +19,15 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+20 Photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fi9-5y-xZM">
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+20 Photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fi9-5y-xZM">
                     <rect key="frame" x="100" y="194" width="182" height="43"/>
                     <fontDescription key="fontDescription" type="system" pointSize="36"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You May Have Matching Photos to Swap" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="72w-fn-JN9">
-                    <rect key="frame" x="34" y="269" width="314" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You Have Matching Photos to Swap" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="72w-fn-JN9">
+                    <rect key="frame" x="49" y="269" width="283" height="21"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -50,7 +50,8 @@
             </variation>
             <connections>
                 <outlet property="matchMyPhotosButton" destination="Udl-Nz-hEj" id="lt8-Ib-KQR"/>
-                <outlet property="sharedPhotosCountLabel" destination="fi9-5y-xZM" id="0aj-HD-DTG"/>
+                <outlet property="sharedPhotosCountLabel" destination="fi9-5y-xZM" id="TDk-yP-Ifx"/>
+                <outlet property="upsellTitleLabel" destination="72w-fn-JN9" id="Bde-B7-AQK"/>
             </connections>
             <point key="canvasLocation" x="30.5" y="264.5"/>
         </view>
